deployment/ansible/roles/k8s/templates/argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: argocd-server
    namespace: argocd
spec:
    entryPoints:
        - websecure
    routes:
        # temproary workaround for traefik bug (interoperability with ingress)
        - kind: Rule
          match: Host(`argocd.frank.elsinga.de`) && PathPrefix(`/.well-known/acme-challenge/`)
          priority: 12
          services:
              - name: cm-acme-http-solver-9cp9g
                port: 8089
                kind: Service
        - kind: Rule
          match: Host(`argocd.frank.elsinga.de`)
          priority: 10
          services:
              - name: argocd-server
                port: 80
        - kind: Rule
          match: Host(`argocd.frank.elsinga.de`) && Headers(`Content-Type`, `application/grpc`)
          priority: 11
          services:
              - name: argocd-server
                port: 80
                scheme: h2c
    tls:
        secretName: argocd.frank.elsinga.de
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: argocd-server-http
    namespace: argocd
spec:
    entryPoints:
        - web
    routes:
        # temproary workaround for traefik bug (interoperability with ingress)
        - kind: Rule
          match: Host(`argocd.frank.elsinga.de`) && PathPrefix(`/.well-known/acme-challenge/`)
          priority: 12
          services:
              - name: cm-acme-http-solver-9cp9g
                port: 8089
                kind: Service
        - kind: Rule
          match: Host(`argocd.frank.elsinga.de`)
          services:
              - name: noop@internal
                kind: TraefikService
          middlewares:
              - name: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: https
    namespace: argocd
spec:
    redirectScheme:
        scheme: https
        permanent: true
