deployment/ansible/roles/k8s/templates/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.nav.tum.sexy`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.nav.tum.sexy`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      priority: 10
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: auth
    - match: Host(`traefik.nav.tum.sexy`)
      kind: Rule
      priority: 9
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: redirect-to-dashboard
  tls:
    secretName: traefik.nav.tum.sexy
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-dashboard
  namespace: kube-system
spec:
  redirectRegex:
    regex: ^https://traefik.nav.tum.sexy/(.*)
    replacement: https://traefik.nav.tum.sexy/dashboard/

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-login
